<resources>
    <string name="app_name">Zadanie_z_toolbarem</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="witaj">Witaj</string>
    <string name="nieznany">Nieznany</string>
    <string name="tabela_ocen">Tabela Ocen</string>
    <string name="informacje">Informacje</string>
    <string name="zamknij">Zamknij</string>
    <string name="strona_g_wna">Strona Główna</string>
    <string name="niezalogowano">Niezalogowano</string>
    <string name="toolbar_icon">Toolbar icon</string>
    <string name="user_icon">User Icon</string>
</resources>